@@ -1,4 +1,5 @@
 Dragon World is hosting a stage of the World Rally Championships!
 Type ^Lhelp rally^n for instructions on how to play.
+New command ^Lpartexchange^n.
 
 Don't forget the talker meet! 8th May 2010 in Coventry!
